--- a/PhraseChase/Base.lproj/Main.storyboard
+++ b/PhraseChase/Base.lproj/Main.storyboard
@@ -14,6 +14,7 @@
             <string>LilitaOne</string>
             <string>LilitaOne</string>
             <string>LilitaOne</string>
+            <string>LilitaOne</string>
         </mutableArray>
         <mutableArray key="VarelaRound-Regular.ttf">
             <string>VarelaRound-Regular</string>
@@ -125,6 +126,7 @@
                             <constraint firstItem="AtC-3a-uQR" firstAttribute="leading" secondItem="zIN-8m-PR4" secondAttribute="trailing" constant="-116" id="vEx-vb-FjU"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="yvY-If-0rC"/>
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="667" height="375"/>
@@ -134,7 +136,6 @@
                         <outlet property="teamBScore" destination="m8i-Le-LDq" id="yfy-O7-fdQ"/>
                         <outlet property="wordDisplayLabel" destination="GYl-1m-g4z" id="eZo-Tz-Ghc"/>
                         <segue destination="lB9-R1-cac" kind="modal" identifier="scoreEntry" modalTransitionStyle="crossDissolve" id="EXz-df-sYG"/>
-                        <segue destination="WUF-55-eDL" kind="modal" identifier="showWinner" id="73l-Xk-4zM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
@@ -190,12 +191,32 @@
                     <view key="view" contentMode="scaleToFill" id="8jB-3R-tIV">
                         <rect key="frame" x="0.0" y="0.0" width="568" height="320"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q7K-IF-tx8">
+                                <rect key="frame" x="56" y="130" width="456" height="59"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="59" id="B4e-DU-tjF"/>
+                                    <constraint firstAttribute="width" constant="456" id="rjY-6l-2SI"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="LilitaOne" family="Lilita One" pointSize="46"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="centerY" secondItem="q7K-IF-tx8" secondAttribute="centerY" id="Q19-ts-nxW"/>
+                            <constraint firstAttribute="centerX" secondItem="q7K-IF-tx8" secondAttribute="centerX" id="lgU-zt-CfG"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="8TD-UM-79c"/>
+                    <connections>
+                        <outlet property="winnerLabel" destination="q7K-IF-tx8" id="dt9-hu-8mB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="re3-F6-E41" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="613" y="940"/>
+            <point key="canvasLocation" x="759" y="886"/>
         </scene>
         <!--Point Record-->
         <scene sceneID="FWm-k3-mJX">
@@ -247,7 +268,6 @@
                                 </state>
                                 <connections>
                                     <action selector="teamAButtonPressed:" destination="lB9-R1-cac" eventType="touchUpInside" id="X01-EB-cC9"/>
-                                    <segue destination="vXZ-lx-hvc" kind="modal" id="oEL-td-I9J"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ydx-jZ-P5o">
@@ -265,7 +285,6 @@
                                 </state>
                                 <connections>
                                     <action selector="teamBButtonPressed:" destination="lB9-R1-cac" eventType="touchUpInside" id="LOI-An-IL2"/>
-                                    <segue destination="vXZ-lx-hvc" kind="modal" id="1hP-Jb-Dz4"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -289,11 +308,14 @@
                     <connections>
                         <outlet property="teamAButton" destination="6sv-MW-Xg0" id="jA9-zp-g8k"/>
                         <outlet property="teamBButton" destination="ydx-jZ-P5o" id="2ku-xm-Epg"/>
+                        <segue destination="WUF-55-eDL" kind="modal" identifier="showWinner" modalTransitionStyle="crossDissolve" id="Nmc-66-Ugj"/>
+                        <segue destination="vXZ-lx-hvc" kind="modal" identifier="teamAPoint" modalTransitionStyle="crossDissolve" id="Ux8-O3-GSq"/>
+                        <segue destination="vXZ-lx-hvc" kind="modal" identifier="teamBPoint" modalTransitionStyle="crossDissolve" id="PHg-gF-sXT"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sbB-W3-7X9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-45" y="940"/>
+            <point key="canvasLocation" x="27" y="886"/>
         </scene>
     </scenes>
     <resources>
@@ -307,6 +329,6 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="oEL-td-I9J"/>
+        <segue reference="Ux8-O3-GSq"/>
     </inferredMetricsTieBreakers>
 </document>
